fix: techs issues on mobile screen

--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,41 @@ body {
 	transform: translateZ(0);
 }
 
+.hexagon {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 64.5px;
+	height: 100px;
+	background-image: linear-gradient(90deg, #434343, #151030);
+	border-radius: 10px;
+	transition: transform 400ms ease;
+}
+
+.hexagon:before,
+.hexagon:after {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: inherit;
+	height: inherit;
+	background-image: inherit;
+	border-radius: inherit;
+}
+
+.hexagon:before {
+	transform: rotate(60deg);
+}
+
+.hexagon:after {
+	transform: rotate(-60deg);
+}
+
 @keyframes mulShdSpin {
 
 	0%,
